[gd_scene load_steps=5 format=3 uid="uid://cvqohvlr6nu66"]

[ext_resource type="Script" path="res://Game/GUI/game_over_menu.gd" id="1_w5k58"]
[ext_resource type="Script" path="res://Game/GUI/restart_button.gd" id="2_0avu0"]
[ext_resource type="Shader" path="res://Game/GUI/glow_and_fade.gdshader" id="2_yt45o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j6p50"]
shader = ExtResource("2_yt45o")
shader_parameter/fadeSpeed = 3.0

[node name="GameOverMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w5k58")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameOver" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Game Over"
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Final Score: 1000"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HighScore" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "High Score 1000"

[node name="Padding" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="NewHighScore" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_j6p50")
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "New"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Restart"
script = ExtResource("2_0avu0")

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="MarginContainer/VBoxContainer/RestartButton" method="_on_pressed"]
